--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
     "react-simple-wheel-picker": "^1.2.0",
+    "react-wheelpicker": "^1.0.8",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
